--- a/BreakOutBox/Views/_ViewImports.cshtml
+++ b/BreakOutBox/Views/_ViewImports.cshtml
@@ -3,4 +3,5 @@
 @using BreakOutBox.Models
 @using BreakOutBox.Models.AccountViewModels
 @using BreakOutBox.Models.ManageViewModels
+@using Microsoft.AspNetCore.Http
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
