--- a/BreakOutBox/Views/Shared/_LoginPartial.cshtml
+++ b/BreakOutBox/Views/Shared/_LoginPartial.cshtml
@@ -6,18 +6,30 @@
 
 @if (SignInManager.IsSignedIn(User))
 {
-    <form asp-area="" asp-controller="Account" asp-action="Logout" method="post" id="logoutForm" class="navbar-right">
-
-        <li>
-            <a asp-area="" asp-controller="Leerkracht" asp-action="Index" title="Manage">Hello @UserManager.GetUserName(User)!</a>
-        </li>
-        <li>
-            <button type="submit" class="btn btn-link navbar-btn navbar-link">Log out</button>
-        </li>
+    <form asp-controller="Account" asp-action="Logout" method="post" id="logoutForm" class="navbar-right">
+        <ul>
+            @if (Context.Session.GetString("sessiecode") != null) { 
+                <li><a asp-controller="Leerkracht" asp-action="OverzichtGroepenInSessie">Ga naar Sessie @(JsonConvert.DeserializeObject<string>(Context.Session.GetString("sessiecode")))</a></li> 
+            }
+            <li>
+                <a asp-area="" asp-controller="Leerkracht" asp-action="Index" title="Manage">Hello @UserManager.GetUserName(User)!</a>
+            </li>
+            <li>
+                <button type="submit" class="btn btn-link navbar-btn navbar-link">Log out</button>
+            </li>
+        </ul>
     </form>
 }
 else
 {
-    @*<li><a asp-area="" asp-controller="Account" asp-action="Register">Registreer leerkracht</a></li>*@
-    <li><a asp-area="" asp-controller="Account" asp-action="Login">Aanmelden als leerkracht</a></li>
+    <ul>
+        @if (Context.Session.GetString("sessiecode") != null && Context.Session.GetString("groepid") == null) { 
+            <li><a asp-controller="Sessie" asp-action="SessieOverzicht">Ga naar Sessie @(JsonConvert.DeserializeObject<string>(Context.Session.GetString("sessiecode")))</a></li> 
+        }
+        else if (Context.Session.GetString("sessiecode") != null && Context.Session.GetString("groepid") != null) { 
+            <li><a asp-controller="Spel" asp-action="SpelSpelen">Ga naar Sessie @(JsonConvert.DeserializeObject<string>(Context.Session.GetString("sessiecode")))</a></li> 
+        }
+        @*<li><a asp-area="" asp-controller="Account" asp-action="Register">Registreer leerkracht</a></li>*@
+        <li><a asp-area="" asp-controller="Account" asp-action="Login">Aanmelden als leerkracht</a></li>
+    </ul>
 }
