--- a/BreakOutBox/Views/_ViewImports.cshtml
+++ b/BreakOutBox/Views/_ViewImports.cshtml
@@ -4,4 +4,5 @@
 @using BreakOutBox.Models.AccountViewModels
 @using BreakOutBox.Models.ManageViewModels
 @using Microsoft.AspNetCore.Http
+@using Newtonsoft.Json
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
