--- a/BreakOutBox/Views/Shared/_Layout.cshtml
+++ b/BreakOutBox/Views/Shared/_Layout.cshtml
@@ -31,7 +31,10 @@
         <div class="container">
             <div class="row nav">
                 <nav id="navigatie" class="sm-12 col inputinline">
-                    @await Html.PartialAsync("_LoginPartial")
+                    <ul>
+                        @RenderSection("AddItemsToNav", required: false)
+                        @await Html.PartialAsync("_LoginPartial")
+                    </ul>
                 </nav>
             </div>
         </div>
