--- a/BreakOutBox/Views/Home/Index.cshtml
+++ b/BreakOutBox/Views/Home/Index.cshtml
@@ -10,6 +10,6 @@
         <p><input asp-for="SessieCode" type="text" class="form-control" autocomplete="off" /></p>
         <p><span asp-validation-for="SessieCode" class="text-danger"></span></p>
         <p>@TempData["message"]</p>
-        <p><button type="submit" class="">Ga verder</button></p>
+        <p><button type="submit">Ga verder</button></p>
     </form>
 </div>
