Add placeholders for input, fix tempdata home, disable zet gereed button, format for "1 poging", make messages more clear

--- a/BreakOutBox/Views/Leerkracht/OverzichtGroepenInSessie.cshtml
+++ b/BreakOutBox/Views/Leerkracht/OverzichtGroepenInSessie.cshtml
@@ -71,11 +71,11 @@
                         @switch (groep.State)
                         {
                             case 0: // NietGereedState
-                                <li><a asp-controller="Leerkracht" asp-action="ZetGroepGereed" asp-route-groepid="@groep.GroepId">Zet gereed</a></li>
+                                @*<li><a asp-controller="Leerkracht" asp-action="ZetGroepGereed" asp-route-groepid="@groep.GroepId">Zet gereed</a></li>*@
                                 <li><a asp-controller="Leerkracht" asp-action="VergrendelGroep" asp-route-groepid="@groep.GroepId">Vergrendel</a></li>
                                 break;
                             case 1: // GereedState
-                                <li><a asp-controller="Leerkracht" asp-action="ZetGroepNietGereed" asp-route-groepid="@groep.GroepId">Zet niet gereed</a></li>
+                                <li><a asp-controller="Leerkracht" asp-action="ZetGroepNietGereed" asp-route-groepid="@groep.GroepId">Zet niet gekozen</a></li>
                                 <li><a asp-controller="Leerkracht" asp-action="VergrendelGroep" asp-route-groepid="@groep.GroepId">Vergrendel</a></li>
                                 break;
                             case 2: // VergrendeldState
