--- a/BreakOutBox/Views/Home/Index.cshtml
+++ b/BreakOutBox/Views/Home/Index.cshtml
@@ -7,7 +7,7 @@
     <h1>Break Out Box</h1>
     <form asp-action="EnterSessie">
         <p><label asp-for="SessieCode"></label></p>
-        <p><input asp-for="SessieCode" type="text" class="form-control" autocomplete="off" /></p>
+        <p><input asp-for="SessieCode" type="text" class="form-control" autocomplete="off" placeholder="Sessiecode"></p>
         <p><span asp-validation-for="SessieCode" class="text-danger"></span></p>
         <p>@TempData["message"]</p>
         <p><button type="submit">Ga verder</button></p>
