--- a/BreakOutBox/Views/Home/Index.cshtml
+++ b/BreakOutBox/Views/Home/Index.cshtml
@@ -1,15 +1,37 @@
 ﻿@model BreakOutBox.Models.SessieViewModels.IndexViewModel
 @{
-    ViewData["Title"] = "Welcome";
+    ViewData["Title"] = "Home";
 }
 
-<div class="inputinline text-center">
-    <h1>Break Out Box</h1>
-    <form asp-action="EnterSessie">
-        <p><label asp-for="SessieCode"></label></p>
-        <p><input asp-for="SessieCode" type="text" class="form-control" autocomplete="off" placeholder="Sessiecode"></p>
-        <p><span asp-validation-for="SessieCode" class="text-danger"></span></p>
-        <p>@TempData["message"]</p>
-        <p><button type="submit">Ga verder</button></p>
-    </form>
-</div>
+@*<div class="inputinline text-center">
+
+        <form asp-action="Index">
+            <p><label asp-for="SessieCode"></label></p>
+            <p><input asp-for="SessieCode" type="text" class="form-control" autocomplete="off" placeholder="Sessiecode"></p>
+            <p><span asp-validation-for="SessieCode" class="text-danger"></span></p>
+            <p>@TempData["message"]</p>
+            <p><button type="submit">Ga verder</button></p>
+        </form>
+    </div>*@
+
+<p class="mb-3 text-center"><i class="fas fa-box-open fa-8x text-primary"></i></p>
+<h1 class="text-primary text-center mb-5">BreakOutBox</h1>
+<form asp-action="Index" style="margin: 0 auto; max-width: 330px;">
+    <div class="form-row align-items-center">
+        <div class="col-auto form-group">
+            <div class="input-group input-group-seamless">
+                @*<label asp-for="SessieCode" class="sr-only">Sessiecode</label>*@
+                <span class="input-group-prepend">
+                    <span class="input-group-text">
+                        <i class="fas fa-key"></i>
+                    </span>
+                </span>
+                <input asp-for="SessieCode" class="form-control" id="Sessiecode" placeholder="Sessiecode" type="text" autocomplete="off">
+            </div>
+        </div>
+        <div class="col-auto form-group">
+            <button type="submit" class="btn btn-primary">Ga</button>
+        </div>
+    </div>
+</form>
+<p>@TempData["message"]</p>
