--- a/BreakOutBox/Views/Home/Index.cshtml
+++ b/BreakOutBox/Views/Home/Index.cshtml
@@ -3,18 +3,7 @@
     ViewData["Title"] = "Home";
 }
 
-@*<div class="inputinline text-center">
-
-        <form asp-action="Index">
-            <p><label asp-for="SessieCode"></label></p>
-            <p><input asp-for="SessieCode" type="text" class="form-control" autocomplete="off" placeholder="Sessiecode"></p>
-            <p><span asp-validation-for="SessieCode" class="text-danger"></span></p>
-            <p>@TempData["message"]</p>
-            <p><button type="submit">Ga verder</button></p>
-        </form>
-    </div>*@
-
-<p class="mb-3 text-center"><i class="fas fa-box-open fa-8x text-primary"></i></p>
+<p class="text-center pt-5"><i class="fas fa-box-open fa-8x text-primary"></i></p>
 <h1 class="text-primary text-center mb-5">BreakOutBox</h1>
 <form asp-action="Index" style="margin: 0 auto; max-width: 330px;">
     <div class="form-row align-items-center">
@@ -34,4 +23,3 @@
         </div>
     </div>
 </form>
-<p>@TempData["message"]</p>
