--- a/BreakOutBox/Views/Home/Index.cshtml
+++ b/BreakOutBox/Views/Home/Index.cshtml
@@ -5,7 +5,7 @@
 
 <p class="text-center pt-5"><i class="fas fa-box-open fa-8x text-primary"></i></p>
 <h1 class="text-primary text-center mb-5">BreakOutBox</h1>
-<form asp-action="Index" style="margin: 0 auto; max-width: 330px;">
+<form asp-action="Index" class="text-center" id="homeForm">
     <div class="form-row align-items-center">
         <div class="col-auto form-group">
             <div class="input-group input-group-seamless">
