--- a/BreakOutBox/Views/Account/ForgotPassword.cshtml
+++ b/BreakOutBox/Views/Account/ForgotPassword.cshtml
@@ -1,22 +1,24 @@
 ﻿@model ForgotPasswordViewModel
 @{
-    ViewData["Title"] = "Forgot your password?";
+    ViewData["Title"] = "Wachtwoord vergeten?";
 }
 
-<h2>@ViewData["Title"]</h2>
-<h4>Enter your email.</h4>
-<hr />
-<div class="row">
-    <div class="col-md-4">
-        <form asp-action="ForgotPassword" method="post">
-            <div asp-validation-summary="All" class="text-danger"></div>
-            <div class="form-group">
-                <label asp-for="Email"></label>
-                <input asp-for="Email" class="form-control" />
-                <span asp-validation-for="Email" class="text-danger"></span>
-            </div>
-            <button type="submit" class="btn btn-default">Submit</button>
-        </form>
+<div class="container pt-5">
+    <div class="row">
+        <div class="col">
+            <h2 class="mb-4">@ViewData["Title"]</h2>
+            <form asp-action="ForgotPassword" method="post">
+                <div asp-validation-summary="All" class="text-danger"></div>
+                <div class="form-group">
+                    <label asp-for="Email"></label>
+                    <input asp-for="Email" class="form-control" placeholder="naam@voorbeeld.com" type="email">
+                    <span asp-validation-for="Email" class="text-danger"></span>
+                </div>
+                <div class="form-group">
+                    <button type="submit" class="btn btn-primary">Versturen</button>
+                </div>
+            </form>
+        </div>
     </div>
 </div>
 
