--- a/BreakOutBox/Views/Account/Login.cshtml
+++ b/BreakOutBox/Views/Account/Login.cshtml
@@ -4,29 +4,24 @@
 @using Microsoft.AspNetCore.Http.Authentication
 @model LoginViewModel
 @inject SignInManager<ApplicationUser> SignInManager
-
 @{
     ViewData["Title"] = "Aanmelden als leerkracht";
 }
 
-<div class="row">
-    <div class="col-12 col">
-        <h2>@ViewData["Title"]</h2>
-    </div>
-</div>
-<div class="row">
-    <div class="sm-12 col">
-        <section>
+<div class="container pt-5">
+    <div class="row">
+        <div class="col">
+            <h2 class="mb-4">@ViewData["Title"]</h2>
             <form asp-route-returnurl="@ViewData["ReturnUrl"]" method="post">
                 @*<h4>Use a local account to log in.</h4>*@
                 <div class="form-group">
                     <label asp-for="Email"></label>
-                    <input asp-for="Email" class="form-control" />
+                    <input asp-for="Email" class="form-control" placeholder="naam@voorbeeld.com" type="email">
                     <span asp-validation-for="Email" class="text-danger"></span>
                 </div>
                 <div class="form-group">
-                    <label asp-for="Password"></label>
-                    <input asp-for="Password" class="form-control" />
+                    <label asp-for="Password">Wachtwoord</label>
+                    <input asp-for="Password" class="form-control" type="password" placeholder="Uw wachtwoord">
                     <span asp-validation-for="Password" class="text-danger"></span>
                 </div>
                 <div class="form-group">
@@ -37,20 +32,20 @@
                         </label>
                     </div>
                 </div>
-                <div asp-validation-summary="All" class="text-danger"></div><br>
+                <div asp-validation-summary="All" class="text-danger"></div>
                 <div class="form-group">
-                    <button type="submit" class="btn btn-default">Aanmelden</button>
+                    <button type="submit" class="btn btn-primary">Aanmelden</button>
                 </div>
                 <div class="form-group">
                     <p>
                         <a asp-action="ForgotPassword">Wachtwoord vergeten?</a>
                     </p>
                     @*<p>
-                <a asp-action="Register" asp-route-returnurl="@ViewData["ReturnUrl"]">Als leerkracht registreren?</a>
-            </p>*@
+                            <a asp-action="Register" asp-route-returnurl="@ViewData["ReturnUrl"]">Als leerkracht registreren?</a>
+                        </p>*@
                 </div>
             </form>
-        </section>
+        </div>
     </div>
 </div>
 
