--- a/BreakOutBox/Views/Home/Index.cshtml
+++ b/BreakOutBox/Views/Home/Index.cshtml
@@ -16,11 +16,9 @@
                             <i class="fas fa-key"></i>
                         </span>
                     </span>
-                    <input asp-for="SessieCode" class="form-control" id="Sessiecode" placeholder="Sessiecode" type="text" autocomplete="off">
+                    <input asp-for="SessieCode" class="form-control mr-2" id="Sessiecode" placeholder="Sessiecode" type="text" autocomplete="off">
+                    <button type="submit" class="btn btn-primary">Ga</button>
                 </div>
-            </div>
-            <div class="col-auto form-group">
-                <button type="submit" class="btn btn-primary">Ga</button>
             </div>
         </div>
     </form>
