Markup layout SessieOverzicht

--- a/BreakOutBox/Views/Account/ForgotPassword.cshtml
+++ b/BreakOutBox/Views/Account/ForgotPassword.cshtml
@@ -5,7 +5,7 @@
 
 <div class="container pt-5">
     <div class="row">
-        <div class="col">
+        <div class="col-auto">
             <h2 class="mb-4">@ViewData["Title"]</h2>
             <form asp-action="ForgotPassword" method="post">
                 <div asp-validation-summary="All" class="text-danger"></div>
