--- a/BreakOutBox/Views/Account/Login.cshtml
+++ b/BreakOutBox/Views/Account/Login.cshtml
@@ -10,7 +10,7 @@
 
 <div class="container pt-5">
     <div class="row">
-        <div class="col">
+        <div class="col-auto">
             <h2 class="mb-4">@ViewData["Title"]</h2>
             <form asp-route-returnurl="@ViewData["ReturnUrl"]" method="post">
                 @*<h4>Use a local account to log in.</h4>*@
