--- a/BreakOutBox/Views/Home/Index.cshtml
+++ b/BreakOutBox/Views/Home/Index.cshtml
@@ -3,7 +3,7 @@
     ViewData["Title"] = "Home";
 }
 
-<div class="container mt-6">
+<div class="container">
     <p class="text-center pt-5"><i class="fas fa-box-open fa-8x text-primary"></i></p>
     <h1 class="text-primary text-center mb-5">BreakOutBox</h1>
     <form asp-action="Index" class="text-center" id="homeForm">
