--- a/BreakOutBox/wwwroot/css/app.css
+++ b/BreakOutBox/wwwroot/css/app.css
@@ -14,3 +14,23 @@ nav .btn:hover {
 #homeForm > * {
     display: inline-block;
 }
+
+#pdfcontainer {
+    position: relative;
+    height: 0;
+    overflow: hidden;
+    padding-bottom: 100%;
+    box-shadow: 0 7px 4px -6px rgba(0,0,0,0.5);
+}
+
+#pdf {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
+
+h2 {
+    line-height: 1.2;
+}
