Add sync button to sessieoverzicht. Add current group to view.

--- a/BreakOutBox/Views/Leerkracht/OverzichtGroepenInSessie.cshtml
+++ b/BreakOutBox/Views/Leerkracht/OverzichtGroepenInSessie.cshtml
@@ -30,7 +30,7 @@
                 <button asp-controller="Leerkracht" asp-action="DeblokkeerSessie">Deblokkeer</button>
                 break;
         }
-        <button type="submit" style="font-size:22px" onClick="window.location.reload()"> <i class="fa">&#xf021;</i></button>
+        <button type="submit" style="font-size:22px" onClick="window.location.reload(true)"> <i class="fa">&#xf021;</i></button>
     </form>
 </div>
 <div class="row">
