--- a/BreakOutBox/Views/Sessie/SessieOverzicht.cshtml
+++ b/BreakOutBox/Views/Sessie/SessieOverzicht.cshtml
@@ -9,10 +9,11 @@
 <div class="container-fluid pt-5">
     <div class="row text-center">
         <div class="col mb-4">
-            <h4 class="mr-3" style="display:inline;">@ViewData["Title"]</h4> <h2 class="" style="display:inline-block;">@Model.Omschrijving</h2>
+            <h4 style="display:inline;">@ViewData["Title"]</h4> <h2 class="ml-3 mr-3" style="display:inline;">@Model.Omschrijving</h2>
+            <button type="button" style="display:inline;margin-bottom: 0.75rem;" onClick="window.location.reload(true)" class="btn btn-outline-primary btn-pill btn-sm"><i class="fas fa-sync-alt"></i></button>
             @if (ViewBag.GeselecteerdeGroep != null && Model.State == 2)
             {
-                <form asp-controller="Sessie" asp-action="StartSpel" method="post" class="mt-4">
+                <form asp-controller="Sessie" asp-action="StartSpel" method="post" class="mt-3">
                     <button type="submit" class="btn btn-primary btn-pill btn-lg">Start de eerste opdracht</button>
                 </form>
             }
@@ -20,6 +21,25 @@
     </div>
     <div class="row">
         <div class="col-md-12 col-lg-6 mb-5">
+            @if (ViewBag.GeselecteerdeGroep != null)
+            { 
+                <h4>Jouw groep</h4>
+                <div class="row mb-5" style="padding: 0 15px;">
+                    <div class="col-12 col-sm-6 col-md-4 groep">
+                        <ul>
+                            <li><i class="fas fa-users fa-fw icon"></i>Groep #@(ViewBag.GeselecteerdeGroep.GroepId)</li>
+                            @foreach (var leerling in ViewBag.GeselecteerdeGroep.Leerlingen)
+                            {
+                                <li><i class="far fa-user fa-fw icon"></i>@(leerling.Voornaam + " " + leerling.Achternaam)</li>
+                            }
+                            @if (ViewBag.GeselecteerdeGroep.State != 2)
+                            {
+                                <li><a href="@Url.Action("ZetGroepNietGereed", "Sessie")" class="tip" title="Klik hier om deze groep te deselecteren">Deze groep deselecteren</a></li>
+                            }
+                        </ul>
+                    </div>
+                </div>
+            }
             <h4>Groep selecteren</h4>
             <p>Selecteer de groep waar jullie tot behoren.</p>
             <div class="row" style="padding: 0 15px;">
