--- a/BreakOutBox/Views/Account/Login.cshtml
+++ b/BreakOutBox/Views/Account/Login.cshtml
@@ -25,11 +25,9 @@
                     <span asp-validation-for="Password" class="text-danger"></span>
                 </div>
                 <div class="form-group">
-                    <div class="checkbox">
-                        <label asp-for="RememberMe">
-                            <input asp-for="RememberMe" />
-                            @Html.DisplayNameFor(m => m.RememberMe)
-                        </label>
+                    <div class="custom-control custom-checkbox d-block">
+                        <input asp-for="RememberMe" class="custom-control-input">
+                        <label asp-for="RememberMe" class="custom-control-label">@Html.DisplayNameFor(m => m.RememberMe)</label>
                     </div>
                 </div>
                 <div asp-validation-summary="All" class="text-danger"></div>
