--- a/BreakOutBox/wwwroot/css/app.css
+++ b/BreakOutBox/wwwroot/css/app.css
@@ -8,10 +8,11 @@ nav .btn:hover {
 }
 
 .alert-warning {
+    color: darkgray;
     color: rgba(0,0,0,0.66);
 }
 
-#homeForm > * {
+#homeForm > div {
     display: inline-block;
 }
 
@@ -33,4 +34,10 @@ nav .btn:hover {
 
 h2 {
     line-height: 1.2;
+}
+
+.progress {
+    max-width: 800px;
+    margin-left: auto;
+    margin-right: auto;
 }
