--- a/BreakOutBox/wwwroot/css/groep.css
+++ b/BreakOutBox/wwwroot/css/groep.css
@@ -1,7 +1,7 @@
 ﻿/* 
 =========== GROEP ===========
 */
-ul, li {
+.groep ul, li {
     padding: 0;
     margin: 0;
     list-style: none;
@@ -66,12 +66,8 @@ ul, li {
     text-decoration: none;
 }
 
-/*@media only screen and (min-width:992px) {
-    .md-6 {
-        -webkit-box-flex: 0;
-        -webkit-flex: 0 0 50%;
-        -ms-flex: 0 0 50%;
-        flex: 0 0 50%;
-        max-width: 50%;
+@media only screen and (max-width:575px) {
+    .groep {
+        padding-right: 0;
     }
-}*/
+}
