Add about page (link in footer)

--- a/BreakOutBox/Views/Account/ForgotPasswordConfirmation.cshtml
+++ b/BreakOutBox/Views/Account/ForgotPasswordConfirmation.cshtml
@@ -1,8 +1,12 @@
 ﻿@{
-    ViewData["Title"] = "Forgot password confirmation";
+    ViewData["Title"] = "Wachtwoord vergeten?";
 }
 
-<h2>@ViewData["Title"]</h2>
-<p>
-    Please check your email to reset your password.
-</p>
+<div class="container pt-4">
+    <div class="row">
+        <div class="col">
+            <h2 class="mb-4">@ViewData["Title"]</h2>
+            <p>Gelieve je mailbox eens te controleren.</p>
+        </div>
+    </div>
+</div>
