--- a/BreakOutBox/Views/Shared/_Layout.cshtml
+++ b/BreakOutBox/Views/Shared/_Layout.cshtml
@@ -43,7 +43,7 @@
     @await Html.PartialAsync("_AlertPartial")
     @RenderBody()
     <footer class="text-center pt-3">
-        <p>&copy; 2018 - BreakOutBox</p>
+        <p class="small">&copy; 2018 - BreakOutBox - <a asp-controller="Home" asp-action="AboutUs">G22</a></p>
     </footer>
 
     <!-- JavaScript Dependencies: jQuery, Popper.js, Bootstrap JS, Shards JS, Font Awesome -->
