--- a/BreakOutBox/Views/Spel/SpelSpelen.cshtml
+++ b/BreakOutBox/Views/Spel/SpelSpelen.cshtml
@@ -5,20 +5,18 @@
     var progressiePercentageCompleted = (int)(System.Math.Round(progressiePercentage, 0) - ((decimal)100 / progressie[0]));
     ViewData["Title"] = @Model.Opdracht.Oefening.Naam;
 }
-
 @section Head {
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-    <script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/sweetalert/1.1.3/sweetalert.min.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/sweetalert/1.1.3/sweetalert.min.js"></script>
 }
 
-<div class="container-fluid pt-5">
+<div class="container-fluid pt-4">
     <div class="row text-center">
         <div class="col mb-4 inlin">
             <h4 class="d-inline">@(Model.Opdracht.Oefening.Vak.Naam)</h4> <h2 class="d-inline ml-3 mr-3">@Model.Opdracht.Oefening.Naam</h2>
-            <button type="button" style="margin-bottom: 0.75rem;" onClick="window.location.reload(true)" class="btn btn-outline-primary btn-pill btn-sm d-inline"><i class="fas fa-sync-alt"></i></button>
+            <form asp-action="SpelSpelen" asp-controller="Spel" class="d-inline" method="get">
+                <button type="submit" style="margin-bottom: 0.75rem;" class="btn btn-outline-primary btn-pill btn-sm d-inline"><i class="fas fa-sync-alt"></i></button>
+            </form>
             <div class="progress progress-lg mt-3">
                 <div class="progress-bar" role="progressbar" style="width: @(progressiePercentageCompleted)%" aria-valuenow="@(progressiePercentageCompleted)" aria-valuemin="0" aria-valuemax="100"></div>
             </div>
